# Decentralized_Skeleton

./: .gitignore  README.md
phase1/: CMakeLists.txt  start.sh
phase1/client/: mini3_pb2.py  mini3_pb2_grpc.py
phase1/include/: file_logger.h  logger.h  message.h  server.h  thread_safe_queue.h
phase1/proto/: mini3.proto
phase1/src/: client.cpp  client.h  main.cpp  server.cpp
